# -FOOD

./: .dockerignore  .editorconfig  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODEX.md  Dockerfile  GEMINI.md  PROJE_ANALIZ_RAPORU.md  README.md  docker-compose.test.yml  docker-compose.yml  entrypoint.sh  humans.txt  implementation_plan.md  main_clean.css  main_utf8.css  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  tree_output.txt
.agents/: README.md
.agents/prompts/: architecture-review.md  code-review.md  migration.md  model-design.md  performance-review.md  refactor.md  release.md  security-review.md  seo-review.md  ui-review.md
.agents/skills/accessibility/: SKILL.md
.agents/skills/architecture/: SKILL.md
.agents/skills/css/: SKILL.md
.agents/skills/deployment/: SKILL.md
.agents/skills/django/: SKILL.md
.github/workflows/: ci.yml
accounts/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
accounts/admin/: __init__.py  user_admin.py
accounts/managers/: __init__.py  user_manager.py  user_queryset.py
accounts/migrations/: 0001_initial.py
accounts/models/: __init__.py  user.py
accounts/selectors/: __init__.py  profile_selector.py  user_selector.py
accounts/services/: __init__.py  user_service.py
accounts/tests/: README.md
accounts/validators/: __init__.py  user_validator.py
common/: __init__.py  middleware.py  types.py
config/: __init__.py  cache.py  celery.py  gunicorn.py  logging.py
core/: converters.py  settings.py  test_settings.py  urls.py
core/utils/: slug.py
docs/: AI_CONTEXT.md  API.md  ARCHITECTURE.md  CHANGELOG.md  CODING_STANDARDS.md  DATABASE.md  DECISIONS.md  DEPLOYMENT.md  NEXT_SESSION.md  README.md  ROADMAP.md  SECURITY.md  SEO.md  TESTING.md  WORKTREE_PLAN.md
fixtures/: regions.json
interactions/: admin.py  apps.py  models.py  signals.py  urls.py  views.py
interactions/migrations/: 0001_initial.py  0002_rating_rating_score_between_one_and_five.py
interactions/models/: __init__.py  comment.py  favorite.py  rating.py
interactions/services/: __init__.py  comment_service.py
interactions/validators/: __init__.py  comment_validator.py
locale/: .gitkeep
nginx/: nginx.conf
pages/: apps.py  sitemaps.py  tests.py  urls.py  views.py
pages/services/: __init__.py  home_service.py  home_services.py  seo_service.py
pages/validators/: __init__.py  contact_validator.py
pages/views/: __init__.py  about_view.py  contact_view.py  cookies_views.py  home_view.py  kvkk_views.py  privacy_views.py  terms_view.py
provinces/: admin.py  apps.py  models.py  sitemaps.py  urls.py  views.py
provinces/admin/: __init__.py  province_admin.py  recipe.py  region.py  region_admin.py
provinces/managers/: __init__.py  province_manager.py  region_manager.py
provinces/migrations/: 0001_initial.py
provinces/models/: __init__.py  province.py  region.py
provinces/querysets/: __init__.py  province_queryset.py
provinces/selectors/: __init__.py  province_selector.py  region_selector.py
provinces/services/: __init__.py  province_service.py  region_service.py
provinces/tests/: README.md
provinces/validators/: __init__.py  region_validator.py
recipes/: __init__.py  admin.py  apps.py  choices.py  constants.py  forms.py  models.py  sitemaps.py  urls.py  views.py
recipes/admin/: __init__.py  category.py  category_admin.py  cuisine_admin.py  ingredient.py  ingredient_admin.py  recipe.py  recipe_admin.py  recipe_image.py  tag.py  tag_admin.py
recipes/data/: categories.json  ingredients.json  tags.json
recipes/forms/: __init__.py  recipe_form.py
recipes/managers/: __init__.py  recipe_manager.py  recipe_queryset.py
recipes/migrations/: 0001_initial.py  0002_alter_recipe_options_alter_recipetag_options_and_more.py  0003_alter_recipeimage_image.py
recipes/models/: __init__.py  category.py  cuisine.py  ingredient.py  recipe.py  recipe_image.py  recipe_ingredient.py  recipe_tag.py  tag.py
recipes/querysets/: category_queryset.py  cuisine_queryset.py  ingredient_queryset.py  recipe_queryset.py  tag_queryset.py
recipes/selectors/: __init__.py  category_selector.py  ingredient_selector.py  recipe_selector.py  tag_selector.py
recipes/services/: __init__.py  category_service.py  cuisine_service.py  favorite_service.py  image_service.py  ingredient_service.py  rating_service.py  recipe_image_service.py  recipe_service.py  search_service.py  tag_service.py
recipes/signals/: __init__.py  category_signals.py  cuisine_signals.py  ingredient_signals.py  recipe_signals.py  tag_signals.py
recipes/tests/: README.md
recipes/validators/: __init__.py  base_validator.py  category_validator.py  cuisine_validator.py  image_validator.py  ingredient_validator.py  recipe_validator.py  tag_validator.py
recipes/views/: __init__.py  category_views.py  recipe_views.py  search_views.py
requirements/: base.txt  dev.txt  prod.txt
static/css/: main.css
static/js/: main.js
templates/: base.html
templates/accounts/: login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  profile.html  register.html
templates/components/: footer.html
templates/includes/: messages.html  navbar.html  turkey_map.html
templates/layouts/: admin.html  auth.html  default.html  email.html  error.html
templates/pages/: about.html  contact.html  cookies.html  home.html  kvkk.html  privacy.html  terms.html
templates/provinces/: detail.html  list.html  province_detail.html
templates/recipes/: category_detail.html  category_list.html  detail.html  list.html  recipe_detail.html  recipe_form.html  recipe_list.html  search.html
tests/factories/: __init__.py  category_factory.py  interaction_factory.py  province_factory.py  recipe_factory.py  user_factory.py
tests/integration/: test_api.py  test_home_page.py  test_permissions.py  test_views.py
tests/unit/: test_backend_regressions.py  test_interaction_services.py  test_models.py  test_security_middleware.py  test_selectors.py  test_services.py  test_slug_utils.py  test_validators.py
(+151 files in other folders)
