[project]
name = "food"
version = "1.0.0"
description = "Turkish Regional Food Platform"
readme = "README.md"
requires-python = ">=3.14,<3.15"
license = { text = "Proprietary" }

authors = [
    { name = "FOOD Project" }
]

keywords = [
    "django",
    "food",
    "recipes",
    "turkey",
    "regional-food",
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "Django>=6.0,<6.1",
    "psycopg[binary]>=3.2",
]

[project.optional-dependencies]

dev = [
    "coverage[toml]>=7.8",
    "django-stubs>=6.0",
    "mypy>=1.16",
    "pre-commit>=4.2",
    "pytest>=8.4",
    "pytest-django>=4.6.0",
    "ruff>=0.12",
]



[build-system]
requires = [
    "setuptools>=75",
]

build-backend = "setuptools.build_meta"



[tool.ruff]

target-version = "py314"
line-length = 100
indent-width = 4

exclude = [
    ".git",
    ".github",
    ".idea",
    ".venv",
    ".vscode",
    "__pycache__",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    "node_modules",
    "build",
    "dist",
    "media",
    "staticfiles",
    "**/migrations",
]



[tool.ruff.lint]

select = [
    "E",
    "W",
    "F",
    "I",
    "UP",
    "B",
    "DJ",
    "N",
    "SIM",
    "RET",
    "RUF",
]

ignore = []

fixable = [
    "ALL",
]



[tool.ruff.lint.per-file-ignores]

"*/migrations/*.py" = [
    "E501",
    "N806",
]



[tool.ruff.format]

quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true
skip-magic-trailing-comma = false



[tool.pytest.ini_options]

DJANGO_SETTINGS_MODULE = "config.settings"

python_files = [
    "tests.py",
    "test_*.py",
    "*_tests.py",
]

testpaths = [
    "tests",
]

pythonpath = [
    ".",
]

addopts = [
    "-ra",
]



[tool.mypy]

python_version = "3.13"

plugins = [
    "mypy_django_plugin.main",
]

strict = true

warn_unused_configs = true
warn_unused_ignores = true
warn_return_any = true
warn_no_return = true
warn_unreachable = true

show_error_codes = true
pretty = true



[tool.django-stubs]

django_settings_module = "config.settings"



[tool.coverage.run]

branch = true

source = [
    "apps",
]

omit = [
    "*/migrations/*",
    "*/tests/*",
    "manage.py",
]



[tool.coverage.report]

show_missing = true
skip_covered = true
precision = 2

exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "pass",
]