[project]
name = "food"
version = "0.3.0"
description = "Turkish Regional Food Platform"
readme = "README.md"
requires-python = ">=3.14,<3.15"

license = { text = "Proprietary" }

authors = [
    { name = "FOOD Project" },
]

keywords = [
    "django",
    "food",
    "recipes",
    "turkey",
    "regional-food",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "Django>=6.0.7,<6.1",
    "Pillow>=12.3.0",
    "psycopg[binary]>=3.3",
    "python-decouple>=3.8",
]

[project.urls]
Repository = "https://github.com/adhoc0/food"

[project.optional-dependencies]

dev = [
    "coverage[toml]>=7.8",
    "django-debug-toolbar>=6.0",
    "django-stubs>=5.2",
    "django-stubs-ext>=5.2",
    "factory-boy>=3.3",
    "Faker>=37",
    "mypy>=1.18",
    "pre-commit>=4.3",
    "pyright>=1.1",
    "pytest>=8.4",
    "pytest-django>=4.11",
    "ruff>=0.13",
    "typing-extensions>=4.15",
]

[build-system]

requires = [
    "setuptools>=80",
    "wheel",
]

build-backend = "setuptools.build_meta"

[tool.setuptools]

include-package-data = true

[tool.setuptools.packages.find]

where = [
    ".",
]

include = [
    "accounts*",
    "analytics*",
    "api*",
    "config*",
    "core*",
    "interactions*",
    "management*",
    "notifications*",
    "pages*",
    "provinces*",
    "recipes*",
    "search*",
    "sitemaps*",
]

exclude = [
    "tests*",
    "docs*",
    "media*",
    "staticfiles*",
    "build*",
    "dist*",
]

namespaces = false

[tool.ruff]

target-version = "py314"
line-length = 100
indent-width = 4

exclude = [
    ".git",
    ".github",
    ".idea",
    ".venv",
    ".vscode",
    "__pycache__",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    "build",
    "dist",
    "media",
    "staticfiles",
    "node_modules",
    "**/migrations",
]

[tool.ruff.lint]

select = [
    "E",
    "W",
    "F",
    "I",
    "UP",
    "B",
    "DJ",
    "N",
    "SIM",
    "RET",
    "RUF",
]

ignore = [
    "RUF001",
    "RUF002",
    "RUF003",
    "RUF012",
    "DJ012",
]

fixable = [
    "ALL",
]

[tool.ruff.lint.per-file-ignores]

"*/migrations/*.py" = [
    "E501",
    "N806",
]

[tool.ruff.format]

quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true
skip-magic-trailing-comma = false

[tool.pytest.ini_options]

DJANGO_SETTINGS_MODULE = "core.test_settings"

pythonpath = [
    ".",
]

python_files = [
    "tests.py",
    "test_*.py",
    "*_tests.py",
]

testpaths = [
    "tests",
    "accounts",
    "interactions",
    "pages",
    "provinces",
    "recipes",
]

addopts = [
    "-ra",
    "--strict-markers",
]

[tool.mypy]

python_version = "3.14"

# plugins = [
#    "mypy_django_plugin.main",
# ]


strict = true


disallow_any_generics = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_unused_configs = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
show_error_codes = true
pretty = true

[tool.django-stubs]

django_settings_module = "core.settings"

[tool.coverage.run]

branch = true

source = [
    "accounts",
    "analytics",
    "api",
    "config",
    "core",
    "interactions",
    "notifications",
    "pages",
    "provinces",
    "recipes",
    "search",
    "sitemaps",
]

omit = [
    "*/migrations/*",
    "*/tests/*",
    "manage.py",
]

[tool.coverage.report]

show_missing = true
skip_covered = true
precision = 2

exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "pass",
]

[tool.pyright]

include = [
    ".",
]

exclude = [
    ".git",
    ".github",
    ".idea",
    ".venv",
    ".vscode",
    "__pycache__",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    "build",
    "dist",
    "media",
    "staticfiles",
    "node_modules",
    "**/migrations",
]

venvPath = "."
venv = ".venv"

pythonVersion = "3.14"

typeCheckingMode = "basic"

reportMissingImports = true
reportMissingTypeStubs = false

executionEnvironments = [
    { root = ".", extraPaths = ["."] },
]
